--- a/templates/prets.html
+++ b/templates/prets.html
@@ -59,9 +59,11 @@
         .overdue {
             background-color: #f8d7da; /* Bootstrap danger background color */
             color: #721c24; /* Bootstrap danger text color */
-            border: 1px solid #f5c6cb; /* Reducing the harshness of the color with a lighter border */
-            padding: 10px;
-}
+        }
+        .overdue::before {
+            content: "Overdue: ";
+            font-weight: bold;
+        }
         .on-time {
             background-color: #d4edda; /* Bootstrap success background color */
             color: #155724; /* Bootstrap success text color */
@@ -150,9 +152,9 @@
 
                         if (dateRetour < datePret) {
                             li.classList.add('overdue');
-                            li.textContent += ' - Date de Retour doit être après la Date de Pret';
                         } else if (dateRetour < today) {
                             li.classList.add('overdue');
+                            li.textContent += ' - Out of Return Date';
                         } else {
                             li.classList.add('on-time');
                         }
