--- a/templates/gerer_books.html
+++ b/templates/gerer_books.html
@@ -55,9 +55,9 @@
                     </li>
                     <li class="nav-item">
                         {% if session.get('logged_in') %}
-                            <a class="nav-link" href="/logout">Logout</a>
+                        <a class="nav-link" href="/logout">Logout</a>
                         {% else %}
-                            <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                         {% endif %}
                     </li>
                 </ul>
@@ -89,7 +89,15 @@
             </div>
             <div class="form-group">
                 <label for="theme">Thème</label>
-                <input type="text" class="form-control" id="theme">
+                <select class="form-control" id="theme">
+                    <option value="Science Fiction">Science Fiction</option>
+                    <option value="Fantasy">Fantasy</option>
+                    <option value="Mystery">Mystery</option>
+                    <option value="Non-Fiction">Non-Fiction</option>
+                    <option value="Biography">Biography</option>
+                    <option value="History">History</option>
+                    <option value="Romance">Romance</option>
+                </select>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter Livre</button>
             <button id="delete-books-btn" class="btn btn-danger">Delete All Books</button>
@@ -116,8 +124,8 @@
                                 <img src="${book.image_url}" alt="${book.title}">
                                 <p><strong>Title:</strong> ${book.title}</p>
                                 <p><strong>Author:</strong> ${book.author}</p>
-                                <p><strong>Co-Author:</strong> ${book.co_author || ''}</p>
-                                <p><strong>Theme:</strong> ${book.theme || ''}</p>
+                                <p><strong>Co-Author:</strong> ${book.co_author || 'N/A'}</p>
+                                <p><strong>Theme:</strong> ${book.theme}</p>
                             `;
                             booksList.appendChild(bookCard);
                         });
