--- a/templates/gerer_books.html
+++ b/templates/gerer_books.html
@@ -125,6 +125,7 @@
                                 <p><strong>Title:</strong> ${book.title}</p>
                                 <p><strong>Author:</strong> ${book.author}</p>
                                 <p><strong>Co-Author:</strong> ${book.co_author || 'N/A'}</p>
+                                <p><strong>ISBN:</strong> ${book.isbn}</p>
                                 <p><strong>Theme:</strong> ${book.theme}</p>
                             `;
                             booksList.appendChild(bookCard);
